# proper-rust

./: .gitignore  Cargo.toml  Dockerfile  log4rs.yml
config/: settings.toml
docker/: Dockerfile  build.sh
src/: api.rs  main.rs
src/proper_rust/: database.rs  flow_logger.rs  mod.rs  monitoring.rs  proper_rust.rs  settings.rs
tests/: tests.rs
